@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>io.github.zenwave360.zenwave-sdk</groupId>
+    <groupId>io.zenwave360.sdk</groupId>
     <artifactId>zenwave-sdk</artifactId>
-    <version>1.8.0-SNAPSHOT</version>
+    <version>2.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>${project.groupId}:${project.artifactId}</name>
@@ -26,19 +26,6 @@
         </developer>
     </developers>
 
-    <distributionManagement>
-        <repository>
-            <id>ossrh</id>
-            <name>Central Repository OSSRH</name>
-            <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-        </repository>
-        <snapshotRepository>
-            <id>ossrh</id>
-            <name>Central Repository OSSRH</name>
-            <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
-        </snapshotRepository>
-    </distributionManagement>
-
     <scm>
         <connection>scm:git:git://github.com/ZenWave360/zenwave-sdk.git</connection>
         <developerConnection>scm:git:git@github.com:ZenWave360/zenwave-sdk.git</developerConnection>
@@ -48,9 +35,9 @@
 
     <repositories>
         <repository>
-            <id>ossrh-snapshots</id>
+            <id>maven-snapshots</id>
             <snapshots><enabled>true</enabled></snapshots>
-            <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
+            <url>https://central.sonatype.com/repository/maven-snapshots</url>
         </repository>
     </repositories>
 
@@ -69,18 +56,28 @@
         <reflections.version>0.10.2</reflections.version>
         <handlebars-java.version>4.3.1</handlebars-java.version>
         <json-path.version>2.9.0</json-path.version>
-        <json-schema-ref-parser-jvm.version>0.8.7</json-schema-ref-parser-jvm.version>
-        <zdl-jvm.version>1.2.3</zdl-jvm.version>
+        <json-schema-ref-parser-jvm.version>0.9.0</json-schema-ref-parser-jvm.version>
+        <zdl-jvm.version>1.3.0</zdl-jvm.version>
         <graphql-java.version>19.2</graphql-java.version>
-        <google-java-format.version>1.7</google-java-format.version>
-        <palantir-java-format.version>2.38.0</palantir-java-format.version>
+        <google-java-format.version>1.25.2</google-java-format.version>
+        <palantir-java-format.version>2.55.0</palantir-java-format.version>
         <spring-javaformat.version>0.0.39</spring-javaformat.version>
         <junit.version>5.10.1</junit.version>
-        <spring-boot-dependencies.version>2.6.7</spring-boot-dependencies.version>
+        <spring-boot-dependencies.version>3.4.3</spring-boot-dependencies.version>
         <reflections.version>0.10.2</reflections.version>
         <junit.version>5.8.2</junit.version>
         <logcaptor.version>2.7.10</logcaptor.version>
+        <central-publishing-maven-plugin.version>0.7.0</central-publishing-maven-plugin.version>
+
+        <surefire.argLine>
+            --add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
+            --add-exports jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED
+            --add-exports jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED
+            --add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
+            --add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
+        </surefire.argLine>
     </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -114,6 +111,25 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.14.0</version>
+                <configuration>
+                    <compilerArgs>
+                        <arg>--add-exports</arg>
+                        <arg>jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
+                        <arg>--add-exports</arg>
+                        <arg>jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
+                        <arg>--add-exports</arg>
+                        <arg>jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
+                        <arg>--add-exports</arg>
+                        <arg>jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+                        <arg>--add-exports</arg>
+                        <arg>jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+                    </compilerArgs>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
                 <version>2.5.3</version>
                 <configuration>
@@ -131,6 +147,17 @@
                         <version>1.9.5</version>
                     </dependency>
                 </dependencies>
+            </plugin>
+            <plugin>
+                <groupId>org.sonatype.central</groupId>
+                <artifactId>central-publishing-maven-plugin</artifactId>
+                <version>${central-publishing-maven-plugin.version}</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <publishingServerId>central</publishingServerId>
+                    <autoPublish>false</autoPublish>
+                    <!--                    <tokenAuth>true</tokenAuth>-->
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -194,11 +221,12 @@
                 <configuration>
                     <excludes>
                         <exclude>com/intuit/karate/core/**</exclude>
-                        <exclude>com/google/googlejavaformat/java/**</exclude>
                     </excludes>
+                    <propertyName>jacoco.argLine</propertyName>
                 </configuration>
                 <executions>
                     <execution>
+                        <id>prepare-agent</id>
                         <goals>
                             <goal>prepare-agent</goal>
                         </goals>
@@ -225,6 +253,31 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-enforcer-plugin</artifactId>
+                <version>3.5.0</version>
+                <executions>
+                    <execution>
+                        <id>enforce-release-version</id>
+                        <configuration>
+                            <rules>
+                                <requireReleaseVersion />
+                            </rules>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>enforce-snapshot-version</id>
+                        <configuration>
+                            <rules>
+                                <requireSnapshotVersion>
+                                    <failWhenParentIsRelease>false</failWhenParentIsRelease>
+                                </requireSnapshotVersion>
+                            </rules>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
 
         <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
@@ -241,15 +294,16 @@
                 </plugin>
                 <plugin>
                     <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.8.0</version>
+                    <version>3.14.0</version>
                 </plugin>
                 <plugin>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.22.1</version>
+                    <version>3.5.2</version>
                     <configuration>
                         <systemPropertyVariables>
                             <maven.home>${maven.home}</maven.home>
                         </systemPropertyVariables>
+                        <argLine>${jacoco.argLine} ${surefire.argLine}</argLine>
                     </configuration>
                 </plugin>
                 <plugin>
